# ka

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: diff.rs  files.rs  filesystem.rs  history.rs  lib.rs  main.rs  text_diff.rs
src/actions/: create.rs  mod.rs  shift.rs  update.rs
