[package]
name = "ka"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.0.0"
anyhow = "1.0"

[workspace]
members = ["cli"]